Fix for dark mode tinymce background not set to white by default

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -79,7 +79,7 @@
 }
 
 .mce-content-body {
-    color: #fff;
-    background-color: #000 !important;
+    color: #000;
+    background-color: #fff !important;
     border-color: #fff;
 }
